# chatbot-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  a.txt  docker-compose.yml  index.html  ms.txt  pyproject.toml  requirements.txt  run.py  run2.py  testtest.py
config/: config.yaml
deploy/: DEPLOY_GUIDE.md  chatbot.service  deploy.sh  ec2-setup.sh  nginx.conf
scripts/: download_vector.py
src/: __init__.py  config.py  main.py  models.py
src/agents/: __init__.py  answer_agent.py  conditional_agent.py  llm_client.py
src/pipeline/: __init__.py  answer_generator.py  conditional_checker.py  context_validator.py  document_validator.py  pipeline.py  query_classifier.py  query_processor.py  retriever.py
src/retrievers/: __init__.py  hybrid_retriever.py  keyword_retriever.py  test_vector_retriever.py  vector_retriever.py
src/retrievers/models/dragonkue/colbert-ko-0.1b/: README.md  added_tokens.json  config.json  config_sentence_transformers.json  matryoshka_heads.pt  sentence_bert_config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
src/retrievers/models/dragonkue/colbert-ko-0.1b/1_Dense/: config.json
src/utils/: __init__.py  helpers.py  logger.py
tests/: test_pipeline.py
