[project]
name = "chatbot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colbert-matryoshka>=0.1.0",
    "fastapi>=0.128.0",
    "gdown==5.1.0",
    "konlpy==0.6.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.0",
    "loguru>=0.7.2",
    "numpy>=1.26.0",
    "openai>=2.15.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pylate>=1.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0.1",
    "uvicorn[standard]>=0.40.0",
]
